--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         name: effective-altruism
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: nixos-rebuild build --flake .#
+    - run: nix build .#nixosConfigurations."fw".config.system.build.toplevel
 
   build_shell:
     runs-on: ubuntu-latest
