try forcing env var to be visible

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
         name: effective-altruism
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     - run: nix build .#nixosConfigurations."fw".config.system.build.toplevel
+      env:
+        FACTORIO_KEY: '${{ secrets.FACTORIO_KEY }}'
 
   build_shell:
     name: "Development shell"
