--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -1,4 +1,4 @@
-name: "Update `flake.lock` and open a pull request."
+name: "Upgrade"
 on:
   schedule:
   - cron: 0 0 * * 6
@@ -15,7 +15,7 @@ jobs:
       uses: cachix/install-nix-action@v18
       with:
         nix_path: nixpkgs=channel:nixos-unstable
-    - name: Update `flake.lock`; Open pull request
+    - name: Update `flake.lock`; open pull request
       uses: technote-space/create-pr-action@v2
       with:
         EXECUTE_COMMANDS: ./flake-update.sh
