`agent-latitude` config via the install that happened on the latitude

--- a/common/machines.toml
+++ b/common/machines.toml
@@ -5,14 +5,17 @@ timezone = "America/New_York"
 [framework]
 hostname = "fw"
 username = "qd"
+user-fullname = "Quinn Dougherty"
 
 [agent-digitalocean]
 hostname = "herc-agent-digitalocean"
 username = "herc-admin"
+user-fullname = "Hercules Administrator (Digital Ocean)"
 volume = "volume-nyc3-01"
 ip = "142.93.190.80"
 
 [agent-latitude]
 hostname = "herc-agent-latitude"
 username = "herc-admin"
+user-fullname = "Hercules Administrator (Dell Latitude)"
 ip = ""
