--- a/common/machines.toml
+++ b/common/machines.toml
@@ -19,3 +19,9 @@ hostname = "herc-agent-latitude"
 username = "herc-admin"
 user-fullname = "Hercules Administrator Latitude"
 ip = "192.168.1.189"
+
+[chat]
+hostname = "talk"
+username = "synapse-admin"
+user-fullname = "Matrix Administrator"
+ip = ""
