my pine config seems to be building. Other housekeeping piggybacked.

--- a/common/machines.toml
+++ b/common/machines.toml
@@ -8,7 +8,7 @@ username = "qd"
 user-fullname = "Quinn Dougherty"
 
 [pinephone]
-hostname = "pine"
+hostname = "pinephone"
 username = "qd"
 user-fullname = "Quinn Dougherty"
 system = "aarch64-linux"
