--- a/common/machines.toml
+++ b/common/machines.toml
@@ -8,7 +8,7 @@ username = "qd"
 user-fullname = "Quinn Dougherty"
 
 [pinephone]
-hostname = "pinephone"
+hostname = "phone"
 username = "qd"
 user-fullname = "Quinn Dougherty"
 system = "aarch64-linux"
