--- a/common/machines.toml
+++ b/common/machines.toml
@@ -7,7 +7,7 @@ hostname = "grindenstern"
 username = "qd"
 user-fullname = "Quinn Dougherty"
 # one of xmonad, xfce, gnome, kde
-desktop = "xmonad"
+desktop = "gnome"
 
 [phone]
 hostname = "risencrantz"
