--- a/machines/machines.toml
+++ b/machines/machines.toml
@@ -6,8 +6,8 @@ timezone = "America/Los_Angeles"
 hostname = "grindenstern"
 username = "qd"
 user-fullname = "Quinn Dougherty"
-# one of xmonad, xfce, gnome, kde
-desktop = "gnome"
+# one of xmonad, xfce, gnome, kde, emacs (exwm)
+desktop = "emacs"
 
 [phone]
 hostname = "risencrantz"
