--- a/machines/machines.toml
+++ b/machines/machines.toml
@@ -7,7 +7,7 @@ hostname = "grindenstern"
 username = "qd"
 user-fullname = "Quinn Dougherty"
 # one of xmonad, xfce, gnome, kde, emacs (exwm)
-desktop = "xmonad"
+desktop = "kde"
 
 [phone]
 hostname = "risencrantz"
