--- a/machines/machines.toml
+++ b/machines/machines.toml
@@ -19,6 +19,10 @@ user-fullname = "Server Admin"
 ip = "192.168.6.33"
 static4 = "192.168.42.42"
 
+[monitor]
+hostname = "the-band-back-together"
+user-fullname = "Monitor Admin"
+
 [ubuntu]
 hostname = "duck-you-sucker"
 user-fullname = "Quinn Dougherty"
