--- a/machines/machines.toml
+++ b/machines/machines.toml
@@ -6,7 +6,7 @@ timezone = "America/Los_Angeles"
 hostname = "grindenstern"
 user-fullname = "Quinn Dougherty"
 # one of xmonad, xfce, gnome, kde, emacs (exwm)
-desktop = "kde"
+desktop = "xmonad"
 
 [phone]
 hostname = "risencrantz"
