--- a/website/soupault.toml
+++ b/website/soupault.toml
@@ -29,7 +29,7 @@
   #
   # Note that for formats other than HTML, you need to specify an external program
   # for converting them to HTML (see below).
-  page_file_extensions = ["htm", "html", "md", "rst", "adoc"]
+  page_file_extensions = ["htm", "html", "md", "rst", "adoc", "org"]
 
   # By default, soupault uses "clean URLs",
   # that is, $site_dir/page.html is converted to $build_dir/page/index.html
