DOOM enabled actually, haha. copilot in doom, too.

--- a/machines/machines.toml
+++ b/machines/machines.toml
@@ -1,12 +1,12 @@
 [common]
 system = "x86_64-linux"
-timezone = "America/New_York"
+timezone = "Europe/Zurich"
 
 [laptop]
 hostname = "grindenstern"
 user-fullname = "Quinn Dougherty"
 # one of xmonad, xfce, gnome, kde, exwm
-desktop = "exwm"
+desktop = "kde"
 
 [phone]
 hostname = "risencrantz"
