--- a/machines/machines.toml
+++ b/machines/machines.toml
@@ -19,7 +19,7 @@ user-fullname = "Server Admin"
 ip = "192.168.6.33"
 static4 = "192.168.42.42"
 
-[monitor]
+[uptime]
 hostname = "the-band-back-together"
 user-fullname = "Monitor Admin"
 
