--- a/machines/machines.toml
+++ b/machines/machines.toml
@@ -25,5 +25,5 @@ user-fullname = "Monitor Admin"
 ip = "143.198.58.137"
 
 [ubuntu]
-hostname = "duck-you-sucker"
+hostname = "cogrindenstern"
 user-fullname = "Quinn Dougherty"
