--- a/machines/machines.toml
+++ b/machines/machines.toml
@@ -1,6 +1,6 @@
 [common]
 system = "x86_64-linux"
-timezone = "America/New_York" # Los_Angeles
+timezone = "America/Mexico_City" # Los_Angeles
 
 [laptop]
 hostname = "grindenstern"
