--- a/machines/machines.toml
+++ b/machines/machines.toml
@@ -1,6 +1,6 @@
 [common]
 system = "x86_64-linux"
-timezone = "America/New_York"
+timezone = "America/Los_Angeles"
 
 [laptop]
 hostname = "grindenstern"
